# medical-blockchain

client/: package.json
client/src/: App.js
client/src/components/: InsuranceForm.js  RegistrationForm.js  WalletAuth.js  WalletConnect.js
client/src/pages/: InsuranceFormPage.js  InsuranceNFT.json  PaymentPage.js  RegisterPage.css  RegisterPage.js
client/src/services/: apiService.js
server/: ai.py  app.py  crypto.py  endpoints.py  justfile  main.py  models.py  pyproject.toml
server/model/: Untitled.ipynb  justfile  main.py  model.pth
server/model/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
smart-contract/: hardhat.config.js  package-lock.json  package.json
smart-contract/contracts/: InsuranceNFT.sol
smart-contract/scripts/: deploy.js
smart-contract/test/: InsuranceNFT.js
